--- a/eda/environment.yml
+++ b/eda/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - mamba
   - python=3.8
   - numpy
-  - pandas
+  - pandas=1.3.5
   - scipy
   - scikit-learn
   - jupyter
@@ -16,4 +16,8 @@ dependencies:
   - openssl
   - vega_datasets
   - vega
+  - plotly
+  - pandas-profiling
+  - sweetviz
+  - autoviz
 prefix: /Users/benjamincross/miniconda3/envs/altair
